// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuerySearch should not render while loading 1`] = `
<ContextProvider
  value={
    Array [
      Object {
        "error": false,
        "loading": false,
        "results": Array [],
      },
      [Function],
    ]
  }
>
  <ContextProvider
    value={
      Array [
        Object {
          "error": false,
          "loading": false,
          "results": Array [],
        },
        [Function],
      ]
    }
  >
    <div
      className="c-data-selection c-dashboard__content"
    >
      <LoadingIndicator
        IconComponent={
          <Spinner
            color="secondary"
            size={36}
          />
        }
      />
    </div>
  </ContextProvider>
</ContextProvider>
`;

exports[`QuerySearch should render with results 1`] = `
<ContextProvider
  value={
    Array [
      Object {
        "error": false,
        "loading": false,
        "results": Array [],
      },
      [Function],
    ]
  }
>
  <ContextProvider
    value={
      Array [
        Object {
          "error": false,
          "loading": false,
          "results": Array [],
        },
        [Function],
      ]
    }
  >
    <div
      className="c-data-selection c-dashboard__content"
    >
      <div
        className="qa-data-selection-content"
      >
        <Connect(TabBar)>
          <Tabs
            currentPage="data"
          >
            <Tab
              count={0}
              isSelected={false}
              label="Data"
              onClick={[Function]}
              page="DATA_SEARCH_QUERY"
            />
            <Tab
              count={0}
              isSelected={false}
              label="Publicaties"
              onClick={[Function]}
              page="PUBLICATION_SEARCH"
            />
            <Tab
              count={0}
              isSelected={false}
              label="Datasets"
              onClick={[Function]}
              page="DATASET_SEARCH"
            />
            <Tab
              count={0}
              isSelected={false}
              label="Artikelen"
              onClick={[Function]}
              page="ARTICLE_SEARCH"
            />
          </Tabs>
        </Connect(TabBar)>
        <div
          className="qa-search-results"
        />
      </div>
    </div>
  </ContextProvider>
</ContextProvider>
`;
